--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "nike-clone",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel serve src/header.html --public-url / --dist-dir dist",
+    "start": "parcel serve ./src/header.html --public-url / --dist-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,5 +16,6 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
     "parcel": "^2.12.0"
-  }
+  },
+  "description": ""
 }
